--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,10 +33,15 @@
 <!-----------Section1 Start---------->
 <section id = "section2">
   <div>
-    <video width="100%" autoplay loop muted>
-      <source src="assets/video/sec2-bg.mp4" type="video/mp4">
-    </video>
+  
+
+
+    <iframe width="100%" height="700px" src="https://www.youtube.com/embed/2xp-XC5yylA?autoplay=1&mute=1&rel=0
+    ">
+    </iframe>
+    
   </div>
+
 </section>
 <!-----------Section 3 starts--------->
 <section id = "section3">
