--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -76,20 +76,22 @@
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 product_col">
         <div class="product-detail-section">
-          <h2>Resolute</h2>
+          <h2 class = "mb-0">Resolute</h2>
+          <h6>Available in 100 colorways</h6>
          
-            <div>
+            <div class = "pt-2">
+              <h4>Description</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt incidunt officiis repellat blanditiis illo deserunt maxime vero iusto perferendis fugiat.</p>
             </div>
             <div class = "d-flex justify-content-between py-2">
               
               <div class = "product-quantity">
-                <button type = "button" (click) = minus()>-</button>
+                <button type = "button"class = "minus" (click) = minus()>-</button>
                   <input type = "text" [value] ="quantity">   
                 <button type = "button" (click) = plus()>+</button>
               </div>
               <div>
-                <h1>$200</h1>
+                <h3>$100 - $500</h3>
               </div>
             </div>
             <div class="accordion" id="accordionExample">
