--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,9 +33,8 @@
 <!-----------Section1 Start---------->
 <section id = "section2">
   <div>
-    <video width="100%" autoplay loop muted>
-      <source src="assets/video/sec2-bg.mp4" type="video/mp4">
-    </video>
+    <iframe width="100%" height="700px" src="https://www.youtube.com/embed/2xp-XC5yylA?autoplay=1&mute=1">
+    </iframe>
   </div>
 </section>
 <!-----------Section 3 starts--------->
@@ -131,7 +130,7 @@
 <!-----------Section 6 Starts--------->
 <section id = "section6">
   <div class = "container">
-    
+
     <div class = "row flex-column-reverse flex-lg-row flex-md-row">
       <div class = "col-lg-8 col-12">
         <div class = "row">
@@ -243,8 +242,8 @@
 <!-----------Section 8 Ends--------->
 <section id = "section-slider">
   <div class = "container">
-    <ngx-slick-carousel class="carousel" 
-    #slickModal="slick-carousel" 
+    <ngx-slick-carousel class="carousel"
+    #slickModal="slick-carousel"
     [config]="slideConfig">
     <div ngxSlickItem  class="slide slider_content">
       <div class = "box">
