--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<app-header *ngIf="showHeaderFooter"></app-header>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer *ngIf="showHeaderFooter"></app-footer>
 <!-----
 <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h1>
 <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h2>
