--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,21 +1,21 @@
 <section id = "login">
     <div class="container">
-        <app-loader *ngIf="isLoaderVisible"></app-loader>  
+        <app-loader *ngIf="isLoaderVisible"></app-loader>
         <div class="row">
-            <div class="col-md-12"> 
+            <div class="col-md-12">
                 <div class = "box">
-                    
-                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="my_form"> 
+
+                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="my_form">
                         <div class = "py-2 text-center">
                             <h3>Login</h3>
-                        </div>   
+                        </div>
                         <div class="form-group py-2">
                             <label for="email">Email </label>
                             <input type="text" id="email" name="email" formControlName="email" class="form-control">
-                            
+
                             <div *ngIf="loginForm.controls['email'].invalid && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)"
                             class="alert alert-danger">
-                        
+
                                 <div *ngIf="loginForm.controls['email'].errors?.['required']">
                                     Email is required.
                                 </div>
@@ -25,30 +25,30 @@
                             </div>
                         </div>
                         <div class="form-group py-2">
-                            <label for="password">password</label>
+                            <label for="password">Password</label>
                             <input type="password" id="password" name="password" formControlName="password" class="form-control">
                             <div *ngIf="loginForm.controls['password'].invalid && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)"
                             class="alert alert-danger">
                                 <div *ngIf="loginForm.controls['password'].errors?.['required']">
                                     Password name is required.
-                                </div>     
+                                </div>
                             </div>
                         </div>
                         <div class = "text-center mt-3">
                             <button type="submit" class="btn blue-btn text-center" [disabled]="!loginForm.valid">Submit</button>
                         </div>
-                        
+
                     </form>
                     <div  class = "text-center pt-4">
                         <p class = "mb-0">Don’t have an account?</p>
-                        <button type  = "button" class = "btn" routerLink = "/signup">Signup</button>
+                        <button type="button" class="btn" routerLink="/signup">Signup</button>
                      </div>
                     <div class = "background">
                         <div class = "shape"></div>
                         <div class = "shape"></div>
                     </div>
                 </div>
-               
+
             </div>
         </div>
     </div>
