--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <app-loader *ngIf="isLoaderVisible"></app-loader>
         <div class="row">
-           
+
            <!-- <div *ngIf="isEmailErrorVisible">
                 <div  *ngFor="let email_error of email_error">
                     {{ email_error }}
@@ -23,49 +23,49 @@
                     {{ last_name_error }}
                 </div>
             </div> -->
-            <div class="col-md-12"> 
+            <div class="col-md-12">
                 <div class = "box">
-                   
-                   
+
+
                     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="my_form">
                         <div class = "py-2 text-center">
                             <h3>Sign Up</h3>
-                        </div>   
+                        </div>
                         <div class="form-group py-2">
                             <label for="firstname">First Name </label>
                             <input type="text" id="first_name" name="first_name" formControlName="first_name" class="form-control">
-                            
+
                             <div *ngIf="registerForm.controls['first_name'].invalid && (registerForm.controls['first_name'].dirty || registerForm.controls['first_name'].touched)"
                             class="alert alert-danger">
-                        
+
                                 <div *ngIf="registerForm.controls['first_name'].errors?.['required']">
                                     First name is required.
                                 </div>
-                                
+
                             </div>
                         </div>
-                
+
                         <div class="form-group py-2">
                             <label for="lastname">Last Name</label>
                             <input type="text" id="last_name" name="last_name" formControlName="last_name" class="form-control">
-                            
+
                             <div *ngIf="registerForm.controls['last_name'].invalid && (registerForm.controls['last_name'].dirty || registerForm.controls['last_name'].touched)"
                             class="alert alert-danger">
-                        
+
                                 <div *ngIf="registerForm.controls['last_name'].errors?.['required']">
                                     Last name is required.
                                 </div>
-                                
+
                             </div>
                         </div>
-                        
+
                         <div class="form-group py-2">
                             <label for="email">Email </label>
                             <input type="text" id="email" name="email" formControlName="email" class="form-control">
-                            
+
                             <div *ngIf="registerForm.controls['email'].invalid && (registerForm.controls['email'].dirty || registerForm.controls['email'].touched)"
                             class="alert alert-danger">
-                        
+
                                 <div *ngIf="registerForm.controls['email'].errors?.['required']">
                                     Email is required.
                                 </div>
@@ -81,17 +81,17 @@
                             class="alert alert-danger">
                                 <div *ngIf="registerForm.controls['password'].errors?.['required']">
                                     Password name is required.
-                                </div>   
+                                </div>
                                 <div *ngIf="registerForm.controls['password'].errors?.['pattern']">
-                                   <p>The password must be at least 8 characters</p>
-                                   <p>Password must contains at least 1 Uppercase, 1 Lowercase, 1 Digit, 1 Special character</p>
-                                </div>  
+                                  The password must be at least 8 characters.<br>
+                                  Password must contains at least 1 Uppercase, 1 Lowercase, 1 Digit, 1 Special character
+                                </div>
                             </div>
                         </div>
                         <div class = "text-center">
-                            <button type="button" class="btn  blue-btn text-center" [disabled]="formValidate || !registerForm.valid">Submit</button>
+                            <button type="button" class="btn  blue-btn text-center" [disabled]="!registerForm.valid">Submit</button>
                         </div>
-                       
+
                     </form>
                     <div  class = "text-center pt-4">
                        <p class = "mb-0">Already have an Account?</p>
@@ -102,9 +102,9 @@
                         <div class = "shape"></div>
                     </div>
                 </div>
-               
+
             </div>
-            
+
         </div>
     </div>
 </section>
