--- a/src/styles.scss
+++ b/src/styles.scss
@@ -936,12 +936,16 @@ section .blue-btn:hover{
 
 /*****=================(product Page Scss)=============*******/
 #product-details {
+	background-color: #e8e4dd;
 
 	 p{
      font-size: 14px;
-	 margin-bottom: 0px;
+	 
 	}
+	.accordion-item{
+		background-color: transparent !important;
 	.accordion-button {
+		background-color: transparent !important;
 		padding: 0rem 1rem !important;
 		&:not(.collapsed) {
 			color: #000;
@@ -962,45 +966,306 @@ section .blue-btn:hover{
 			box-shadow: unset !important;
 		}
 	}
+}
 	.product-quantity {
 		input {
 			height: 50px;
 			width: 50px;
 			text-align: center;
-			font-size: 30px !important;
+			font-size: 40px !important;
 			vertical-align: middle;
 			padding: 0px !important;
 			border: none;
+			background: transparent;
 		}
 		button {
 			width: 30px;
 			height: 30px;
 			background: #fff;
 			padding: 0px 8px 8px 8px;
-			border: 1px solid #ddd;
+			border: 2px solid rgb(29, 29, 29);
 			display: inline-block;
 			vertical-align: middle;
 			text-align: center;
 			border-radius: 25px;
 			font-size: 20px;
+			background: transparent;
+			line-height: 26px;
+
 		}
 
 		.minus{
-			line-height: 26px;
+			line-height: 25px;
 		}
 	}
-	.product_button {
-		a {
-			color: #fff !important;
-			background-color: #627b80;
+	
+
+	.product-dropdown{
+		.dropdown{
 			width: 100%;
-			text-align: center;
-			border-radius: 25px;
-			padding: 0.6rem;
-			font-size: 20px;
+			button{
+				width: 100%;
+			}
 		}
+
+		
 	}
 }
+
+.product-dropdown .dropbtn {
+	background-color: transparent;
+	color: #000;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	width: 100%;
+  }
+  
+  .product-dropdown .dropdown {
+	position: relative;
+	display: inline-block;
+  }
+
+  .product-dropdown  .dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	width: 100%;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+  }
+  
+  .product-dropdown .dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+
+  .product-dropdown .dropdown-content a:hover {background-color: #ddd;}
+
+  .product-dropdown .dropdown:hover .dropdown-content {display: block;}
+
+  .product-dropdown .dropdown:hover .dropbtn {background-color:transparent;}
+
+
+  
+  #product-details .add_cart{
+	  background-color: #000;
+	  padding: 16px;
+	font-size: 16px;
+	border-radius: 0px;
+	border:1px solid #000;
+	color: #fff;
+	width: 100%;
+  }
+
+
+ 
+
+  .product-dropdown table {
+	  border-color: #000 !important;
+  }
+  .product-dropdown table td{
+	  padding:0px  !important;
+	  border-color: #000;
+  }
+
+  #product-details .color_choose button{
+	  width: 30px;
+	  height:30px;
+	  
+  }
+
+  #product-details .color_choose button:hover{
+	  opacity: 0.5;
+  }
+
+  #product-details .color_choose  .selected{
+	  border:2px solid #000;
+	 
+  }
+
+  #product-details .choose_size li{
+	  margin:2px;
+	  border-radius: 0px !important;
+	  border:1px solid #000;
+	  width: 70px;
+	  height: 40px;
+	  color: #000 !important;
+  }
+
+  #product-details .choose_size .selected{
+   border:2px solid #000;
+  }
+
+  #product-details  .button_list{
+	  display: contents;
+  }
+
+  #product-details .choose_tassels ul li{
+  margin-top: 4px;
+  margin-bottom: 4px;
+  }
+
+  #product-details .choose_tassels .button_list li{
+	  margin:2px;
+	  position: relative;
+	  width:auto;
+  }
+
+
+  #product-details .choose_tassels [type="radio"]:checked,
+  #product-details .choose_tassels [type="radio"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+#product-details .choose_tassels [type="radio"]:checked + label,
+#product-details .choose_tassels [type="radio"]:not(:checked) + label
+{
+    position: relative;
+    padding-left: 32px;
+    cursor: pointer;
+    line-height: 20px;
+    display: inline-block;
+    color: #000;
+	padding-top: 4px;
+}
+#product-details .choose_tassels [type="radio"]:checked + label:before,
+#product-details .choose_tassels [type="radio"]:not(:checked) + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #000;
+    background:transparent;
+}
+#product-details .choose_tassels [type="radio"]:checked + label:after,
+#product-details .choose_tassels [type="radio"]:not(:checked) + label:after {
+	content:" ";
+	position:absolute;
+    left: 9px;
+    top: 4px;
+    width: 8px;
+    height: 15px;
+    border: solid #627b80;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(50deg);
+    -ms-transform: rotate(50deg);
+    transform: rotate(50deg) !important;
+	
+}
+#product-details .choose_tassels [type="radio"]:not(:checked) + label:after {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+#product-details .choose_tassels [type="radio"]:checked + label:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+#product-details .nav-tabs .nav-link{
+	border:1px solid #000;
+	border-radius: 0px;
+	color: #000 ;
+}
+
+#product-details .nav-tabs{
+	border:none !important;
+}
+
+ 
+
+/**************Product Swatch*********/
+#product_swatch img{
+	width: 100%;
+}
+
+#product_swatch .col-lg-6:last-child{
+	padding-top:8rem;
+}
+
+#product_swatch button.blue-btn{
+	width: 300px;
+	padding:2rem 1rem;
+}
+
+#product_swatch h1{
+	position: relative;
+	display: inline-block;
+}
+
+#product_swatch h1:hover::after{
+	content:" ";
+	background-color: #000;
+    height: 5px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -5px;
+	width: auto;	
+
+}
+/********product details slider******/
+#product-detail-slider h2::after{
+	content: '';
+	position: relative;
+	display: block;
+	width: 40px;
+	height: 3px;
+	background: #627b80;
+	bottom: 0;
+	left: calc(48% - 20px);
+	text-align: center;
+	margin-top: 10px;
+   
+}
+#product-detail-slider .product-card{
+	margin:1rem;
+	text-align: center;
+}
+#product-detail-slider .product-card img{
+	width: 100%;
+     height: 350px;
+	 object-fit: contain;
+} 
+
+#product-detail-slider .slick-arrow{
+	position: absolute;
+	top: 45%;
+	background-image:url("assets/img/product/arrow-bg.png");
+	color:#fff;
+	font-size: 20px;
+	vertical-align: middle;
+	height: 40px;
+	width: 30px;
+	z-index: 1000;
+	text-align: center;
+	cursor: pointer;
+	background-size:cover;
+	background-position: center;
+}
+
+#product-detail-slider .arrow_right.slick-arrow{
+	right:-25px;
+}
+
+#product-detail-slider .arrow_left.slick-arrow{
+	left:-25px;
+}
+
+
+
+
+  
+  
+  
+  
+  
 
 
 /**************Product Page scss Ends*********/
@@ -1035,6 +1300,8 @@ section .blue-btn:hover{
 }
 
 /***********Breadcrumb scss ends***********/
+
+
 
 
 /****=============(Responsive SCSS)============******/
