--- a/src/app/nodata/nodata.component.html
+++ b/src/app/nodata/nodata.component.html
@@ -1,6 +1,6 @@
 <section id = "page_404">
     <div class = "container ">
-        <div class = "text-center">
+        <div class = "py-4 text-center">
            <h1>404 Page Not Found</h1>
         </div>
     
