--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,12 +38,12 @@
         </ul>
         <div  class = "ms-4">
           <a href = "#">
-            
+
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="256" height="256" viewBox="0 0 256 256" xml:space="preserve">
   <desc>Created with Fabric.js 1.7.22</desc>
   <defs>
   </defs>
-  <g transform="translate(128 128) scale(0.72 0.72)" style="">
+  <g transform="translate(128 128) scale(0.72 0.72)">
     <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)" >
     <path d="M 77.429 61.513 H 24.313 c -0.939 0 -1.752 -0.653 -1.954 -1.571 l -8.418 -38.356 c -0.13 -0.592 0.016 -1.21 0.395 -1.682 c 0.38 -0.472 0.953 -0.747 1.559 -0.747 H 88 c 0.568 0 1.11 0.242 1.489 0.665 c 0.38 0.423 0.561 0.988 0.499 1.553 l -3.515 32.032 C 85.966 58.028 82.077 61.513 77.429 61.513 z M 25.921 57.513 h 51.507 c 2.605 0 4.784 -1.953 5.068 -4.543 l 3.271 -29.813 H 18.381 L 25.921 57.513 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
     <path d="M 54.052 61.513 c -1.104 0 -2 -0.896 -2 -2 V 21.156 c 0 -1.104 0.896 -2 2 -2 s 2 0.896 2 2 v 38.356 C 56.052 60.617 55.156 61.513 54.052 61.513 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
