--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -56,7 +56,7 @@
         <li class="breadcrumb-item"><a routerLink = "" role="button" tabindex="0">Home</a></li>
         <li><i class="fa fa-angle-right" aria-hidden="true"></i>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">Resolute</li>
+        <li class="breadcrumb-item active" aria-current="page">{{product.title}}</li>
       </ol>
     </div>
 	</div>
@@ -70,28 +70,28 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 product_detail_left-col p-0">
         <div class="product">
           <div class = "img-container">
-            <img id = "imageBox" src="assets/img/product/product1.png" width="100%">
+            <img id = "imageBox" (click)="rotate($event)" [src]="product.image" alt="{{product.image}}" width="100%">
           </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 product_col">
         <div class="product-detail-section">
-          <h2 class = "mb-0">Resolute</h2>
-          <h6>Available in 100 colorways</h6>
-         
+          <h2 class = "mb-0">{{product.title}}</h2>
+          <!-- <h6>Available in 100 colorways</h6> -->
+
             <div class = "pt-2">
               <h4>Description</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt incidunt officiis repellat blanditiis illo deserunt maxime vero iusto perferendis fugiat.</p>
+              <p [innerHTML]="product.description"></p>
             </div>
             <div class = "d-flex justify-content-between py-2">
-              
+
               <div class = "product-quantity">
                 <button type = "button"class = "minus" (click) = minus()>-</button>
-                  <input type = "text" [value] ="quantity">   
+                  <input type = "text" [value] ="quantity">
                 <button type = "button" (click) = plus()>+</button>
               </div>
               <div>
-                <h3>$100 - $500</h3>
+                <h3>{{product.price_range}}</h3>
               </div>
             </div>
             <div class="accordion" id="accordionExample">
