--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -26,55 +26,56 @@
                   <table>
                       <tbody>
                           <tr>
-                              <td class = "text-center"><img src = "assets/img/product/product.png"></td>
-                              <td><h5>Resolute</h5>
-                                   <p><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
-                                
+                              <td><img src = "assets/img/product/product.png"></td>
+                              <td><h5 class = "mb-0">Resolute</h5>
+                                   <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
+                                   <div class = "product-quantity">
+                                    <button type = "button"class = "minus" (click) = minus()>-</button>
+                                    <input type = "text" [value] ="quantity">   
+                                    <button type = "button" (click) = plus()>+</button>
+                                  </div>
                             </td>
-                            <td><h4>$639</h4></td>
-                            <td><div class = "product-quantity">
-                                <button type = "button"class = "minus" (click) = minus()>-</button>
-                                <input type = "text" [value] ="quantity">   
-                                <button type = "button" (click) = plus()>+</button>
-                              </div></td>
+                            <td class = "text-center"><h4>$639</h4></td>
+                            
                            
-                            <td><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
+                            <td  class = "text-end"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
                           </tr>
                           <tr>
                               <td colspan="4"><hr></td>
                           </tr>
                           <tr>
-                            <td class = "text-center"><img src = "assets/img/product/product.png"></td>
-                            <td><h5>Resolute</h5>
-                                 <p><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
-                                 
+                            <td><img src = "assets/img/product/product.png"></td>
+                            <td><h5 class = "mb-0">Resolute</h5>
+                                 <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
+                                 <div class = "product-quantity">
+                                  <button type = "button"class = "minus" (click) = minus()>-</button>
+                                  <input type = "text" [value] ="quantity">   
+                                  <button type = "button" (click) = plus()>+</button>
+                                </div>
                           </td>
-                          <td><h4>$639</h4></td>
-                          <td><div class = "product-quantity">
-                            <button type = "button"class = "minus" (click) = minus()>-</button>
-                            <input type = "text" [value] ="quantity">   
-                            <button type = "button" (click) = plus()>+</button>
-                          </div></td>
-                         
-                          <td><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td colspan="4"><hr></td>
-                        </tr>
-                        <tr>
-                            <td class = "text-center"><img src = "assets/img/product/product.png"></td>
-                            <td><h5>Resolute</h5>
-                                 <p><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
-                          </td>
-                          <td><h4>$639</h4></td>
-                          <td><div class = "product-quantity">
-                            <button type = "button"class = "minus" (click) = minus()>-</button>
-                            <input type = "text" [value] ="quantity">   
-                            <button type = "button" (click) = plus()>+</button>
-                          </div></td>
+                          <td class = "text-center"><h4>$639</h4></td>
                           
-                          <td><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
+                         
+                          <td  class = "text-end"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
                         </tr>
+                        <tr>
+                            <td colspan="5"><hr></td>
+                        </tr>
+                        <tr>
+                          <td class = "cart-product-img"><img src = "assets/img/product/product.png"></td>
+                          <td><h5 class = "mb-0">Resolute</h5>
+                               <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
+                               <div class = "product-quantity">
+                                <button type = "button"class = "minus" (click) = minus()>-</button>
+                                <input type = "text" [value] ="quantity">   
+                                <button type = "button" (click) = plus()>+</button>
+                              </div>
+                        </td>
+                        <td class = "text-center"><h4>$639</h4></td>
+                        
+                       
+                        <td  class = "text-end"><button><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
+                      </tr>
                       </tbody>
                   </table>
                 </div> 
