--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,7 @@ a {
   color: #000 !important;
   text-decoration: none;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .container{
@@ -107,7 +108,7 @@ input:focus-visible {
 }
 
 input:focus {
-  border-color: #C4C4C4 !important;
+  border-color: #888888 !important;
   outline: unset !important;
   box-shadow: unset !important;
 }
@@ -122,34 +123,36 @@ textarea:focus {
 }
 
 .form-control{
-  border-color: #C4C4C4 !important;
+  border-color: #888888 !important;
 }
 .form-control:focus{
-  border-color: #C4C4C4 !important;
+  border-color: #888888 !important;
 }
 
 select:focus{
-  border-color: #C4C4C4 !important;
+  border-color: #888888 !important;
   box-shadow: unset !important;
 }
 
 .form-select{
   font-size: 14px !important;
-  color:#c4c4c4 !important;
+  color:#888888 !important;
+  border-color: #888888 !important;
 }
 
 
 
 ::placeholder {
-  color: #C4C4C4 !important;
-  font-size: 12px;
+  color: #888888 !important;
+  font-size: 14px;
 }
 
 form input {
   font-weight: 400 !important;
-  font-size: 12px !important;
+  font-size: 14px !important;
   height: 30px;
-  border-color: #C4C4C4;
+  border-color: #888888 !important;
+  ;
 }
 
 .modal-dialog .modal-content {
@@ -263,6 +266,17 @@ hr{
 		width: 60px;
 		height: 60px;
 	}
+
+	.login_signup_btn{
+	
+		padding-top: 1rem;
+	}
+
+	.login_signup_btn li a{
+		font-weight: 600;
+		color: #627b80 !important;
+		padding: 0.5rem; 
+		}
 }
 
 
@@ -294,6 +308,8 @@ hr{
 			background-color: #ddd;
 		}
 	}
+
+
 }
 
 /*************Header CSS Ends*********/
@@ -941,6 +957,63 @@ hr{
 }
 
 /*****=================(product Page Scss)=============*******/
+#product-listing{
+   .card{
+	   position: relative;
+	   height: 100%;
+	   &:hover{
+		box-shadow: -3px -3px 15px 3px #5b7577, 3px 3px 15px 3px #5b7577;
+
+		h5{
+			text-decoration: underline;
+		}
+
+		.content-overlay {
+			background: rgba(0, 0, 0, 0.3);
+			position: absolute;
+			height: 230px;
+			width: 100%;
+			left: 0;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			opacity: 0;
+			-webkit-transition: all 0.4s ease-in-out 0s;
+			-moz-transition: all 0.4s ease-in-out 0s;
+			transition: all 0.4s ease-in-out 0s;
+			
+		   }
+
+	   }
+	   .product_content{
+		   padding:1rem 0.5rem;
+		h5{
+			text-transform: uppercase;
+
+		}
+		h6{
+			font-size: 18px !important;
+		}
+	   }
+
+	   &:hover .content-overlay{
+		opacity: 1;
+	 }
+  
+	   img{
+		   width: 100%;
+		   height: 230px;
+		   object-fit: cover;
+		   
+	   }
+	  
+   }
+   .col-md-3{
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+  }
+}
+/*****=================(product Page Scss)=============*******/
 #product-details {
 	background-color: #e8e4dd;
 
@@ -1472,6 +1545,144 @@ font-size: 22px;
 		padding-left: 7px;
 	}
 }
+
+
+/***===============Checkout Page Scss===========***/
+
+#checkout_section{
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	background:#f0f0f0;
+}
+
+
+#checkout_section nav span {
+    padding-top: 10px;
+}
+#checkout_section .ship_address{
+	border-radius: 10px;
+	padding:1rem;
+border:1px solid #888888;
+background-color: #627b8061;
+}
+
+#checkout_section input.form-control{
+	height: 35px !important;
+}
+
+#checkout_section .payment_method{
+	border-radius: 10px;
+	padding:1rem;
+border:1px solid #888888;
+background-color: #627b8061;
+}
+
+
+
+#checkout_section .information_check_box{
+	padding-top:10px;
+  }
+  #checkout_section  .information_check_box .contant {
+	display: block;
+	position: relative;
+	padding-left: 33px;
+	padding-top: 5px;
+	cursor: pointer;
+	font-weight: 500;
+	font-size: 0.74rem;
+	color: #adadad;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  #checkout_section .information_check_box .contant input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+  }
+  /* Create a custom checkbox */
+  #checkout_section  .information_check_box .checkmark {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 22px;
+	width: 22px;
+	background-color: #fff;
+	border-radius:5px !important;
+	border: 1px solid #888888;
+  }
+  /* On mouse-over, add a grey background color */
+  #checkout_section .information_check_box .contant:hover input ~ .checkmark {
+		background-color: transparent;
+  }
+  /* When the checkbox is checked, add a blue background */
+  #checkout_section  .information_check_box .contant input:checked ~ .checkmark {
+	background-color: #627b80;
+  }
+  /* Create the checkmark/indicator (hidden when not checked) */
+  #checkout_section .information_check_box .checkmark:after {
+	content: "";
+	position: absolute;
+	display: none;
+  }
+  /* Show the checkmark when checked */
+  #checkout_section  .information_check_box .contant input:checked ~ .checkmark:after {
+	display: block;
+  }
+  /* Style the checkmark/indicator */
+  #checkout_section .information_check_box .contant .checkmark:after {
+	left: 6px;
+    top: 2px;
+    width: 7px;
+    height: 14px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+  }
+
+
+
+  #checkout_section .already_login_heading p {
+    margin-bottom: 0px;
+    float: right;
+    padding-top: 10px;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+#checkout_section .checkout-btn{
+
+	margin-top: 1rem;
+	width: 100%;
+	text-align: center;
+	background-color: #667e84;
+	color: #fff;
+	border-radius: 0px;
+	padding:1rem;
+
+}
+
+#checkout_section .checkout-btn:hover{
+
+	
+	background-color: #667e84;
+	color: #fff;
+	
+
+}
+
+
+
+
+
+  
 
 
 
