--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,9 +35,12 @@
           <li class="nav-item rounded">
             <a class="nav-link" routerLink = "contact" routerLinkActive = "active">Our Story</a>
           </li>
+          <li class="nav-item rounded">
+            <a class="nav-link" routerLink = "contact" (click)="logout()">Logout</a>
+          </li>
         </ul>
         <div  class = "ms-4">
-          <a href = "#">
+          <a routerLink="/cart">
 
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="256" height="256" viewBox="0 0 256 256" xml:space="preserve">
   <desc>Created with Fabric.js 1.7.22</desc>
